--- a/src/com/martos/gui/App.form
+++ b/src/com/martos/gui/App.form
@@ -6,7 +6,7 @@
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
     <properties/>
-    <border type="line" title="Simh Config Generator"/>
+    <border type="line" title="Simh Config Generator (VAX)"/>
     <children>
       <hspacer id="505b4">
         <constraints>
