--- a/src/com/martos/gui/App.form
+++ b/src/com/martos/gui/App.form
@@ -6,7 +6,7 @@
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
     <properties/>
-    <border type="line" title="Simh Config Generator (VAX)"/>
+    <border type="etched" title="Simh Config Generator (VAX)"/>
     <children>
       <hspacer id="505b4">
         <constraints>
@@ -153,6 +153,15 @@
           </grid>
         </constraints>
         <properties/>
+      </component>
+      <component id="ba700" class="javax.swing.JCheckBox" binding="cpu_idle_check">
+        <constraints>
+          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <selected value="true"/>
+          <text value="CPU IDLE"/>
+        </properties>
       </component>
     </children>
   </grid>
